--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,6 +19,9 @@
         <mat-icon aria-label="Side nav toggle icon">person</mat-icon>
       </button>
     </mat-toolbar>
+    <mat-toolbar color="light">
+      <span>HOME</span>
+    </mat-toolbar>
     <!-- Add Content Here -->
   </mat-sidenav-content>
 </mat-sidenav-container>
