--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,8 +3,8 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item (click)="drawer.toggle();navigate('grupos')" routerLinkActive="active">Grupos</a>
-      <a mat-list-item (click)="drawer.toggle();navigate('usuarios')" routerLinkActive="active">Usuarios</a>
+      <a mat-list-item (click)="drawer.toggle()" routerLinkActive="active" routerLink="/dashboard/grupos">Grupos</a>
+      <a mat-list-item (click)="drawer.toggle()" routerLinkActive="active" routerLink="/dashboard/usuarios">Usuarios</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -14,9 +14,19 @@
       </button>
       <span>HOME</span>
       <span class="toolbar-spacer"></span>
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button>
-        <mat-icon aria-label="Side nav toggle icon">person</mat-icon>
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon aria-label="Side nav toggle icon">more_vert</mat-icon>
       </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="navigate('perfil')">
+          <mat-icon>person</mat-icon>
+          <span>Perfil</span>
+        </button>
+        <button mat-menu-item>
+          <mat-icon>logout</mat-icon>
+          <span>Cerrar sesión</span>
+        </button>
+      </mat-menu>
     </mat-toolbar>
     <mat-toolbar color="light">
       <span>HOME</span>
