--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
+<ngx-spinner type="ball-scale-multiple">
+    <p style="color: white">Cargando...</p>
+</ngx-spinner>
 <router-outlet></router-outlet>
