--- a/src/app/dashboard/pages/groups-page/groups-page.component.html
+++ b/src/app/dashboard/pages/groups-page/groups-page.component.html
@@ -1,1 +1,66 @@
-<p>groups-page works!</p>
+<mat-card>
+    <mat-card-header class="card-header">
+        <p>
+            <mat-form-field appearance="outline" class="size-input-full">
+                <mat-label>Buscar...</mat-label>
+                <input type="text" matInput placeholder="Buscar..." [formControl]="formControlInput">
+                <mat-icon matSuffix>search</mat-icon>
+            </mat-form-field>
+        </p>
+        <p>
+            <button mat-raised-button color="primary">Crear grupo</button>
+        </p>
+    </mat-card-header>
+
+    <mat-card-content>
+
+        <div class="mat-elevation-z8 displayBlock">
+            <table mat-table [dataSource]="dataSource" matSort>
+                <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="font-size: 12px;">ID</th>
+                    <td mat-cell *matCellDef="let row" [style]="'font-size: 10px;'">
+                        {{ row.id }}
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="grupo">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="font-size: 12px;">GRUPO</th>
+                    <td mat-cell *matCellDef="let row" style="font-size: 10px;">{{ row.grupo }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="descripcion">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="font-size: 12px;">DESCRIPCION</th>
+                    <td mat-cell *matCellDef="let row" style="font-size: 10px;">{{ row.descripcion }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="numero">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="font-size: 12px;">NUMERO</th>
+                    <td mat-cell *matCellDef="let row" style="font-size: 10px;"> {{ row.numero }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="estatus">
+                    <th mat-header-cell *matHeaderCellDef style="font-size: 12px;">ESTATUS</th>
+                    <td mat-cell *matCellDef="let row" style="font-size: 10px;"> {{ row.estatus }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="timeOut" stickyEnd>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header style="font-size: 12px;">TIMEOUT</th>
+                    <td mat-cell *matCellDef="let row" [style]="'font-size: 10px;'">
+                        {{row.timeOut}}
+                    </td>
+
+                </ng-container>
+
+
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" colspan="4">No se encontraron previsams con "{{formControlInput.value}}"</td>
+                </tr>
+            </table>
+
+        </div>
+        <mat-paginator [pageSizeOptions]="[5,10,20]" aria-label="Select page of previsams"></mat-paginator>
+    </mat-card-content>
+</mat-card>
