--- a/src/app/dashboard/pages/groups-page/groups-page.component.html
+++ b/src/app/dashboard/pages/groups-page/groups-page.component.html
@@ -1,15 +1,15 @@
 <mat-card>
-    <mat-card-header class="card-header">
+    <mat-card-header>
         <p>
-            <mat-form-field appearance="outline" class="size-input-full">
+            <mat-form-field appearance="outline" style="width: 320px;">
                 <mat-label>Buscar...</mat-label>
                 <input type="text" matInput placeholder="Buscar..." [formControl]="formControlInput">
                 <mat-icon matSuffix>search</mat-icon>
             </mat-form-field>
         </p>
-        <p>
+        <!-- <p>
             <button mat-raised-button color="primary">Crear grupo</button>
-        </p>
+        </p> -->
     </mat-card-header>
 
     <mat-card-content>
