--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -17,13 +17,9 @@
       <span>HOME</span>
       <span class="toolbar-spacer"></span>
       <button type="button" aria-label="Toggle sidenav" mat-icon-button [matMenuTriggerFor]="menu">
-        <mat-icon aria-label="Side nav toggle icon">more_vert</mat-icon>
+        <mat-icon aria-label="Side nav toggle icon">logout</mat-icon>
       </button>
       <mat-menu #menu="matMenu">
-        <button mat-menu-item (click)="navigate('perfil')">
-          <mat-icon>person</mat-icon>
-          <span>Perfil</span>
-        </button>
         <button mat-menu-item (click)="logout()">
           <mat-icon>logout</mat-icon>
           <span>Cerrar sesión</span>
